[package]
name = "lolscrimexporter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = 0
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lolscrimexporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.22"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
dirs = "6.0.0"
diesel = {version="2.2.7", features = ["sqlite", "64-column-tables","bundled"] }
diesel_migrations = "2.2.0"
diesel_derives = "2.2.3"


[target.'cfg(target_os = "macos")'.dependencies]
# Include objc2-foundation only on macOS with the "apple" feature enabled.
objc2-foundation = "0.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

